add 2 sections: autoload and scripts

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,13 @@
 {
     "name": "zoe/example",
+    "autoload": {
+	"files": [
+	    "src/Runner.php"
+	]
+    },
+    "scripts": {
+        "phpcs": "phpcs"
+    },
     "description": "example package",
     "authors": [
         {
@@ -9,5 +17,8 @@
     ],
     "require": {
         "tightenco/collect": "^8.0"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.5"
     }
 }
